Upgrade documentation: archive legacy performance docs and add v6 specification guide
Changes from documentation upgrade agents:
- Archive obsolete performance metrics and benchmark docs
- Update performance baselines with current data
- Add comprehensive v6 specification guide with schema reference
- Organize deprecated docs in archived/ directory for historical reference

https://claude.ai/code/session_01AM4wFH7bmizQGYPwWWboZR